Restrict contact details to members of any team

--- a/League/Views/Team/Single.cshtml
+++ b/League/Views/Team/Single.cshtml
@@ -72,7 +72,7 @@
             else
             {
                 <div class="text-success col-md-3">@Localizer["Team contact"]</div>
-                <div class="col-md-7 mb-2">@Localizer["Contacts are only displayed to team members"].</div>
+                <div class="col-md-7 mb-2">@Localizer["Contacts are only displayed to members of any team"].</div>
             }
         }
         <div class="text-success col-md-3">@Localizer["Team Photo"]</div>
