jQuery 3.5.1 fixes https://github.com/axuno/Volleyball-League/issues/3

--- a/League/Views/Shared/_Layout.cshtml
+++ b/League/Views/Shared/_Layout.cshtml
@@ -49,7 +49,7 @@
     </div>
     <footer class="container-fluid rounded site py-1 mb-4">
         <div class="d-flex flex-row">
-            <div class="text-left">
+            <div class="text-center w-100">
                 @{
                     if (string.IsNullOrEmpty(Url.RouteUrl(RouteNames.HomeOrganizationContact)))
                     {
