Editorial changes and translations in views

--- a/League/Views/Home/AboutLeague.de.cshtml
+++ b/League/Views/Home/AboutLeague.de.cshtml
@@ -11,7 +11,7 @@
 <div class="mb-0 pb-1">
     <div class="row">
         <article class="col-md-8">
-            <p class="font-weight-bolder text-primary">Die Volleyball Liga Plattform bringt alles Notwendige mit, um eine Liga zu organisieren und den Spielbetrieb durchzuführen.</p>
+            <p class="font-weight-bolder text-primary">Die Volleyball-Liga Plattform bringt alles Notwendige mit, um eine Liga zu organisieren und den Spielbetrieb durchzuführen.</p>
         </article>
     </div>
     <div class="row">
