--- a/League/Views/Organization/a-indoor/Info/RuleOfGame.cshtml
+++ b/League/Views/Organization/a-indoor/Info/RuleOfGame.cshtml
@@ -29,7 +29,7 @@
     </p>
     <ul>
         <li>nicht an einer offiziellen Spielrunde teilnehmen</li>
-        <li>über einen eigenen Zeiten in einer Sportstätte verfügen. </li>
+        <li>über eigene Zeiten in einer Sportstätte verfügen. </li>
     </ul>
     <p>
         2.2 Ausnahmsweise können auch Mannschaften ohne eigene Zeiten in einer Sportstätte teilnehmen, sofern dem aus planungstechnischer Sicht nichts entgegensteht.
@@ -98,7 +98,7 @@
         6.5 Jede teilnehmende Mannschaft meldet sich mit folgenden Angaben an:
     </p>
     <ul style="margin-left: 16px; margin-top: 0px; margin-bottom: 0px;">
-        <li>2 Ansprechpartner mit Adresse, Telefonnr. und E-Mail Adresse</li>
+        <li>2 Ansprechpartner mit Adresse, Telefonnr. und E-Mail-Adresse</li>
         <li>Sportstätte mit Adresse und Wegbeschreibung</li>
         <li>
             Trainingszeit (Spielbeginn mit Wochentag und Uhrzeit), zu der die Heimspiele ausgetragen werden. Öffnung und
@@ -212,7 +212,7 @@
         11.3 Die Netzhöhe beträgt 2,35 m (Standardmixedhöhe).
     </p>
     <p>
-        11.4 Bestimmte Spielkleidung ist nicht vorgeschrieben. Die Trikots brauchen nicht numeriert zu sein. Sofern mit Libero gespielt wird,
+        11.4 Bestimmte Spielkleidung ist nicht vorgeschrieben. Die Trikots brauchen nicht nummeriert zu sein. Sofern mit Libero gespielt wird,
         muss sich dessen Trikot von dem der Mannschaft deutlich unterscheiden. Der Libero-Einsatz ist dem Schiedsgericht vor Spielbeginn anzuzeigen.
     </p>
     <p>
