--- a/League/Views/Role/_AddMemberModalPartial.cshtml
+++ b/League/Views/Role/_AddMemberModalPartial.cshtml
@@ -19,6 +19,7 @@
                 <div class="form-group col-12">
                     <label asp-for="UserEmail" class="mt-0"></label>
                     <input asp-for="UserEmail" type="text" autofocus autocomplete="off" class="form-control" />
+                    <span class="small text-muted">@_AddMemberModalPartial.MemberMustHaveAnAccount</span>
                 </div>
             </div>
             <div class="row">
