--- a/League/Views/Team/Single.cshtml
+++ b/League/Views/Team/Single.cshtml
@@ -39,7 +39,7 @@
         {
             <div class="text-success col-md-3">@Localizer["Venue"]</div>
             <div class="col-md-7 mb-2">
-                <div><i class="fas fa-map-marker-alt"></i><span class="d-inline-block mr-2"></span><span class="font-weight-bold">@Model.TeamVenueRoundInfo.VenueName</span></div>
+                <div><i class="fas fa-map-marker-alt"></i><span class="d-inline-block mr-2"></span><span class="font-weight-bold">@Model.TeamVenueRoundInfo.VenueName</span> <span>@{if (!string.IsNullOrWhiteSpace(Model.TeamVenueRoundInfo.VenueExtension)){<text>(@Model.TeamVenueRoundInfo.VenueExtension)</text>}}</span></div>
                 <div>@(string.Join(", ", Model.TeamVenueRoundInfo.VenuePostalCode, Model.TeamVenueRoundInfo.VenueCity, Model.TeamVenueRoundInfo.VenueStreet))</div>
                 <div><a class="link" asp-action="@nameof(League.Controllers.Map.Venue)" asp-controller="@nameof(League.Controllers.Map)" asp-route-id="@Model.TeamVenueRoundInfo.VenueId.Value">@Localizer["Direction"]</a></div>
             </div>
