Beautified home button of navigation bar

--- a/League/Views/Organization/a-beach/Info/RuleOfGame.cshtml
+++ b/League/Views/Organization/a-beach/Info/RuleOfGame.cshtml
@@ -86,7 +86,7 @@
         6.5 Jede teilnehmende Mannschaft meldet sich mit folgenden Angaben an:
     </p>
     <ul style="margin-left: 16px; margin-top: 0px; margin-bottom: 0px;">
-        <li>2 Ansprechpartner mit Adresse, Telefonnr. und E-Mail Adresse</li>
+        <li>2 Ansprechpartner mit Adresse, Telefonnr. und E-Mail-Adresse</li>
         <li>Sandplatz mit Adresse und Wegbeschreibung für die Heimspiele</li>
         <li>
             Spielbeginn mit Wochentag und Uhrzeit, zu der die Heimspiele ausgetragen werden. Öffnung und
