Added app_offline.htm for deployment

--- a/League/Views/Match/ReportSheet.cshtml
+++ b/League/Views/Match/ReportSheet.cshtml
@@ -274,9 +274,9 @@
                 <div class="row h-100">
                     <div class="col-12" style="border: 3px solid black">@Localizer["Winner"]:<br />&nbsp;</div>
                     <div class="col-12">&nbsp;<br />&nbsp;<br />&nbsp;</div>
-                    <div class="col-12 border border-left-0 border-right-0 text-center">&#x1F829; @Localizer["Signature"] @Localizer["Team"] <span class="team-circle-small">A</span> &#x1F829;</div>
+                    <div class="col-12 border border-left-0 border-right-0 text-center">&uarr; @Localizer["Signature"] @Localizer["Team"] <span class="team-circle-small">A</span> &uarr;</div>
                     <div class="col-12">&nbsp;<br />&nbsp;<br />&nbsp;</div>
-                    <div class="col-12 border border-left-0 border-right-0 text-center">&#x1F829; @Localizer["Signature"] @Localizer["Team"] <span class="team-circle-small">B</span> &#x1F829;</div>
+                    <div class="col-12 border border-left-0 border-right-0 text-center">&uarr; @Localizer["Signature"] @Localizer["Team"] <span class="team-circle-small">B</span> &uarr;</div>
                 </div>
             </div>
             <div class="col-12 text-center">
