Fixed password rule help text

--- a/League/Views/Manage/_ChangePasswordModalPartial.cshtml
+++ b/League/Views/Manage/_ChangePasswordModalPartial.cshtml
@@ -27,7 +27,7 @@
                     </span>
                 </div>
                 <small id="passwordHelpBlock" class="form-text text-muted">
-                    <partial name="_passwordRules" />
+                    <partial name="@League.ViewNames.Shared._passwordRules" />
                 </small>
                 <span asp-validation-for="NewPassword" class="text-danger"></span>
             </div>
