--- a/League/Views/Shared/_passwordRules.cshtml
+++ b/League/Views/Shared/_passwordRules.cshtml
@@ -16,6 +16,7 @@
     if (rules.RequireNonAlphanumeric) { details.Add(Localizer["one non alphanumeric char"].Value); }
 
     if (basic.Any()) { @string.Join(", ", basic) }
-    if (details.Any()) { @Localizer["where at least"] }
+    if (basic.Any() && details.Any()) { Write(", "); }
+    if (details.Any()) { @(Localizer["where at least"].Value + " ") }
     @string.Join(", ", details)
 }
