--- a/League/Views/Home/Welcome.cshtml
+++ b/League/Views/Home/Welcome.cshtml
@@ -3,7 +3,8 @@
 @using Microsoft.AspNetCore.Mvc.Localization
 @inject IViewLocalizer Localizer
 @{
-    ViewData["Title"] = Localizer["Volleyball League: Organization and Operation"].Value;
+    ViewData["Title"] = Localizer["Volleyball Leagues: Organization and Operation"].Value;
+    ViewData["Description"] = Localizer["The Volleyball League Platform brings everything necessary to organize and to run a league"].Value;
 }
 <div>
     <h2 class="h2">@ViewData["Title"]</h2>
