--- a/League/Views/Shared/_Layout.cshtml
+++ b/League/Views/Shared/_Layout.cshtml
@@ -12,18 +12,29 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=0" />
-    <title>@ViewBag.Title - @(string.IsNullOrEmpty(SiteContext.OrganizationKey) ? NaviLocalizer["Volleyball League"] : SiteContext.Name)</title>
+    <title>@ViewData["Title"]</title>
+    @if (ViewData["Description"] != null)
+    {
+    <meta name="description" content="@ViewData["Description"]" />
+    }
     <partial name="@League.ViewNames.Shared._FavIcons" />
     <link rel="stylesheet" href="~/lib/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="~/css/site.min.css" />
-    <style type="text/css">.site-sticky-top { position: -webkit-sticky; position: sticky; top: 0; z-index: 1020; }</style>
+    <style type="text/css">
+        .site-sticky-top {
+            position: -webkit-sticky;
+            position: sticky;
+            top: 0;
+            z-index: 1020;
+        }
+    </style>
     @await RenderSectionAsync("styles", required: false)
 </head>
 <body>
     <header class="rounded site">
         <div class="d-flex flex-column flex-md-row justify-content-between h-100">
             <div class="my-auto order-2 order-md-1">
-                <h4 class="h4 header-organization">@(string.IsNullOrEmpty(SiteContext.OrganizationKey) ? NaviLocalizer["Volleyball League"] : SiteContext.Name)</h4>
+                <h1 class="h4 header-organization">@(string.IsNullOrEmpty(SiteContext.OrganizationKey) ? NaviLocalizer["Volleyball League"] : SiteContext.Name)</h1>
             </div>
             <div class="my-auto order-1 order-md-2 text-md-right header-logo">
                 <a class="d-block" href="@Url.Action(nameof(League.Controllers.Home.Welcome), nameof(League.Controllers.Home))" style="text-decoration: none">
