--- a/League/Views/Organization/a-beach/Info/News.cshtml
+++ b/League/Views/Organization/a-beach/Info/News.cshtml
@@ -1,13 +1,14 @@
 ﻿@using System.Threading
 @using League.Components
+@using League.Helpers
 @using League.Routing
 @using Microsoft.AspNetCore.Mvc.Localization
 @inject IViewLocalizer Localizer
 @{
-    ViewData["Title"] = "Aktuelles";
+    ViewData.Title("Aktuelles");
 }
 <div>
-    <h2 class="h2">@ViewData["Title"]</h2>
+    <h2 class="h2">@ViewData.Title()</h2>
     <hr />
 </div>
 <div class="mb-0 pb-1">
