--- a/League/Views/Home/Welcome.cshtml
+++ b/League/Views/Home/Welcome.cshtml
@@ -7,7 +7,7 @@
     ViewData.Description(Localizer["The Volleyball League Platform brings everything necessary to organize and to run a league"].Value);
 }
 <div>
-    <h2 class="h2">@ViewData["Title"]</h2>
+    <h2 class="h2">@ViewData.Title()</h2>
     <hr />
 </div>
 <div class="mb-0 pb-1">
