--- a/League/Views/Shared/_Layout.cshtml
+++ b/League/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
                 <a class="d-block" href="@Url.Action(nameof(League.Controllers.Home.Welcome), nameof(League.Controllers.Home))" style="text-decoration: none">
                     <span class="d-inline-block part1">volleyball-liga</span>
                     <span class="d-inline-block part2">.de</span>
-                    <img class="d-none d-md-inline-block" src="@Url.Content("/images/logo-league-header.png")" alt="Logo" />
+                    <img class="d-none d-md-inline-block" src="@Url.Content("~/images/logo-league-header.png")" alt="Logo" />
                 </a>
             </div>
         </div>
