--- a/League/Views/Home/Contact.cshtml
+++ b/League/Views/Home/Contact.cshtml
@@ -2,7 +2,7 @@
 @using League.DI
 @using Microsoft.AspNetCore.Mvc.Localization
 @model League.Models.HomeViewModels.ContactViewModel
-@inject OrganizationSiteContext SiteContext
+@inject SiteContext SiteContext
 @inject IViewLocalizer Localizer
 @{
     ViewData["Title"] = Localizer["Message"];
