--- a/League/Views/Match/ReportSheet.cshtml
+++ b/League/Views/Match/ReportSheet.cshtml
@@ -1,7 +1,7 @@
 ﻿@using League.DI
 @using Microsoft.AspNetCore.Mvc.Localization
 @inject IViewLocalizer Localizer
-@inject OrganizationSiteContext SiteContext
+@inject SiteContext SiteContext
 @inject Axuno.Tools.DateAndTime.TimeZoneConverter TimeZoneConverter
 @model TournamentManager.DAL.TypedViewClasses.MatchReportSheetRow
 @{
