--- a/League/Views/Organization/a-beach/Info/RuleOfGame.cshtml
+++ b/League/Views/Organization/a-beach/Info/RuleOfGame.cshtml
@@ -1,5 +1,5 @@
 ﻿@using League.Helpers
-@inject League.DI.OrganizationSiteContext SiteContext
+@inject League.DI.SiteContext SiteContext
 @{
     ViewData.Title("Spielordnung");
 }
