--- a/League/Views/Organization/a-indoor/Home/Index.cshtml
+++ b/League/Views/Organization/a-indoor/Home/Index.cshtml
@@ -2,7 +2,7 @@
 @using League.Components
 @using League.Helpers
 @using League.Routing
-@inject League.DI.OrganizationSiteContext SiteContext
+@inject League.DI.SiteContext SiteContext
 @{
     ViewData.Title("Volleyball-Mixedliga Augsburg");
     ViewData.Description(SiteContext.Description);
