--- a/League/Views/Shared/_Layout.cshtml
+++ b/League/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
 @using League.ViewNames
 @using Microsoft.AspNetCore.Mvc.Localization
 @using Microsoft.Extensions.Localization
-@inject OrganizationSiteContext SiteContext
+@inject SiteContext SiteContext
 @inject IStringLocalizer<NavigationResource> NaviLocalizer;
 @inject IViewLocalizer Localizer
 <!DOCTYPE html>
