--- a/League/Views/Account/ExternalSignInConfirmation.cshtml
+++ b/League/Views/Account/ExternalSignInConfirmation.cshtml
@@ -1,5 +1,5 @@
 ﻿@inject IViewLocalizer Localizer
-@inject OrganizationSiteContext SiteContext
+@inject SiteContext SiteContext
 @using League.Controllers
 @using League.DI
 @using Microsoft.AspNetCore.Mvc.Localization
