--- a/League/Views/Home/Welcome.cshtml
+++ b/League/Views/Home/Welcome.cshtml
@@ -4,7 +4,7 @@
 @inject IViewLocalizer Localizer
 @{
     ViewData.Title(Localizer["Volleyball Leagues: Organization and Operation"].Value);
-    ViewData.Description(Localizer["Volleyball League is a sports platform that brings everything necessary to organize and to run a league"].Value);
+    ViewData.Description(Localizer["Volleyball League is an open source sports platform that brings everything necessary to organize and to run a league"].Value);
 }
 <div>
     <h2 class="h2">@ViewData.Title()</h2>
