--- a/League/Views/Home/AboutLeague.cshtml
+++ b/League/Views/Home/AboutLeague.cshtml
@@ -1,9 +1,10 @@
 ﻿@using League.Routing
+@using League.Helpers
 @{
-    ViewData["Title"] = "About Volleyball League";
+    ViewData.Title("About Volleyball League");
 }
 <div>
-    <h2 class="h2">@ViewData["Title"]</h2>
+    <h2 class="h2">@ViewData.Title()</h2>
     <hr />
 </div>
 <div class="mb-0 pb-1">
