--- a/League/Views/Home/ContactConfirmation.cshtml
+++ b/League/Views/Home/ContactConfirmation.cshtml
@@ -1,10 +1,11 @@
 ﻿@using Microsoft.AspNetCore.Mvc.Localization
+@using League.Helpers
 @inject IViewLocalizer Localizer
 @{
-    ViewData["Title"] = Localizer["Thanks for your message"];
+    ViewData.Title(Localizer["Thanks for your message"].Value);
 }
 <div>
-    <h2 class="h2 d-inline-block">@ViewData["Title"]</h2>
+    <h2 class="h2 d-inline-block">@ViewData.Title()</h2>
     <hr />
 </div>
 <div class="mb-0 pb-1">
