--- a/League/Views/Home/LegalDisclosure.cshtml
+++ b/League/Views/Home/LegalDisclosure.cshtml
@@ -1,8 +1,9 @@
-﻿@{
-    ViewData["Title"] = "Legal Disclosure";
+﻿@using League.Helpers
+@{
+    ViewData.Title("Legal Disclosure");
 }
 <div>
-    <h2 class="h2">@ViewData["Title"]</h2>
+    <h2 class="h2">@ViewData.Title()</h2>
     <hr />
 </div>
 <div class="mb-0 pb-1">
