--- a/League/Views/Home/PictureCredits.cshtml
+++ b/League/Views/Home/PictureCredits.cshtml
@@ -1,10 +1,11 @@
 ﻿@using Microsoft.AspNetCore.Mvc.Localization
+@using League.Helpers
 @inject IViewLocalizer Localizer
 @{
-    ViewData["Title"] = Localizer["Picture Credits"];
+    ViewData.Title(Localizer["Picture Credits"].Value);
 }
 <div>
-    <h2 class="h2">@ViewData["Title"]</h2>
+    <h2 class="h2">@ViewData.Title()</h2>
     <hr />
 </div>
 <div class="mb-0 pb-1">
