--- a/League/Views/Home/Privacy.cshtml
+++ b/League/Views/Home/Privacy.cshtml
@@ -1,8 +1,10 @@
-﻿@{
+﻿@using League.Helpers
+@{
     var Website = "\"volleyball-liga.de\"";
     var Company = "axuno Non-profit Ltd., Leni-Hirsch-Weg 12, 86156 Augsburg, Germany";
     var RequiredCookies = "<em>Required Cookies</em><br/>Required Cookies are required to enable core site functionality. These cookies allow us to provide you a secure log-in and to remember your log-in details, to maintain certain processes, and to make sure the website looks consistent.";
     var EdgeDeleteCookies = "<li>Microsoft Edge: <a href='https://support.microsoft.com/en-us/help/4027947/microsoft-edge-delete-cookies' target='_blank' rel='nofollow noopener'>https://support.microsoft.com/en-us/help/4027947/microsoft-edge-delete-cookies</a></li>";
+    ViewData.Title("Privacy Policy");
 }
 <h1>Privacy policy</h1>
 <p>Responsible party pursuant to data protection laws, in particular the EU General Data Protection Regulation (GDPR), for @Website is</p>
