--- a/League/Views/Organization/a-indoor/Info/News.cshtml
+++ b/League/Views/Organization/a-indoor/Info/News.cshtml
@@ -13,7 +13,7 @@
 </div>
 <div class="mb-0 pb-1">
     <div class="d-flex flex-column mb-4">
-        Derzeit liegen keine aktuellen Infos vor.
+        Aufgrund der Covid-19 Pandemie musste die Saison 2019/20 leider abgebrochen werden.
     </div>
 </div>
 @section styles
